# mle-training

./: Dockerfile  README.md  env.yml  nonstandardcode.py  setup.cfg  setup.py
deploy/conda/: linux_cpu_py39.yml
docs/: Makefile  make.bat
docs/source/: conf.py  housing_price.rst  index.rst
src/housing_price/: ingest_data.py  logger.py  score.py  train.py
tests/functional_tests/: functional_tests.py
tests/unit_tests/: ingest_data_test.py  score_test.py  train_test.py
